tdf#106577 cairo_mask pattern affects more surface than expected

Change-Id: I7f967c401f7b84fd696fa4cf8a944f7a5730917c
(cherry picked from commit ec864247bc40d92e32e3b0f9916d3e39974c9116)